[package]
name = "async_tasks"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
tokio = { version = "0.2.22", features = ["rt-core", "sync", "time"], default-features = false }
